Removing the generated settings.xml from script
The generated settings.xml contained info like internal host names that
should not be put out in the public repo.